Fixed Dark mode and fixed some general styling Separated page and container So that container makes a bubble around the element container makes it take up a screen like a letter in the center of the screen.

--- a/class-env/pages/project/AudioDemo/audio-demo.css
+++ b/class-env/pages/project/AudioDemo/audio-demo.css
@@ -1,20 +1,6 @@
 main
 {
-	background-color: var(--dark-purple);
 	display: flex;
-	padding: 3rem;
-}
-
-.bubble-container
-{
-	background-color: #e8e8e8;
-	border: 1px solid rgba(0, 0, 0, 0.1);
-	border-radius: 5rem;
-	box-shadow: 1px 1px 3rem 1px rgba(209, 209, 209, 0.3);
-	height: auto;
-	padding: 3rem;
-	transition: background-color 0.3s ease-in-out;
-	width: 100%;
 }
 
 /*
@@ -27,10 +13,11 @@ main
 	flex-direction: column;
 	gap: 1rem;
 	height: auto;
-	left: 0;
+	left: 2rem;
+	max-width: min-content;
 	min-width: 315px;
 	position: sticky;
-	top: 1rem; /* Distance from the top of the page since sticky */
+	top: 3rem; /* Distance from the top of the page since sticky */
 }
 
 #title-controls
@@ -77,17 +64,8 @@ main
 
 /*
 	Title Table
- */
-#titles
-{
-	align-items: flex-start;
-	height: auto;
-	margin: auto 3rem;
-	min-height: 70vh;
-	position: sticky;
-	width: 100%;
-}
 
+/*/
 #titleCount
 {
 	display: flex;
@@ -96,12 +74,6 @@ main
 	right: 5rem;
 	text-align: center;
 	top: -2rem;
-}
-
-#titles table
-{
-	text-align: center;
-	text-wrap: wrap;
 }
 
 #titles th, #titles td
